<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_dark"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProfileLarge"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivProfileLarge"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"/>

    <LinearLayout
        android:id="@+id/llProfileOptions"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ivProfileLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnEditAccount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/edit_account"
            android:background="@drawable/button_rounded"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/log_out"
            android:background="@drawable/button_rounded"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnRecurring"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/recurring_transactions"
            android:background="@drawable/button_rounded"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnCustomCategories"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/custom_categories"
            android:background="@drawable/button_rounded"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
