<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_dark">

    <TextView
        android:id="@+id/tvAddBudgetTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_category"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etBudgetCategory"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/category"
        android:background="@drawable/button_rounded"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddBudgetTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/etBudgetAmount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:background="@drawable/button_rounded"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etBudgetCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnSaveBudgetCategory"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/save"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etBudgetAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
