<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_dark"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvScanResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_result"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvOCRText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ocr_dummy_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvScanResultTitle"
        app:layout_constraintBottom_toTopOf="@id/btnConfirmScan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@drawable/rounded_card"/>

    <Button
        android:id="@+id/btnConfirmScan"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/confirm"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
